ADD: 屏幕自适应

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <script type="text/javascript" src="deps/cocos2d-js-v3.11-lite.js" charset="UTF-8"></script>
 </head>
 <body>   
-    <canvas id="gameCanvas" width="1152" height="688"></canvas>
+    <!-- <canvas id="gameCanvas" width="1152" height="688"></canvas> -->
+    <canvas id="gameCanvas"></canvas>
     <script type="text/javascript" src="main.js"></script>
 </body>
 </html>
